ci: use ZCG for containers